--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,22 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap');
+@import './theme/variables.scss';
+
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+
+  width: 100%;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: $font-m;
+}
+
+.subtle {
+  color: $grey;
+  opacity: 0.7;
+
+  font-size: $font-s;
 }
