--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,8 +1,13 @@
 $blue: #1f405f;
+$blue-dark: #102233;
 $grey: #979797;
+$dark: #0d1b29;
 
 $font-s: 14px;
 $font-m: 16px;
 $font-l: 20px;
 
 $shadow-l: 10px 10px 22px 0px rgba(38, 0, 0, 0.15);
+
+$side-menu-width: 280px;
+$sysbar-height: 80px;
