--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -1,4 +1,16 @@
+@import '../theme/variables.scss';
+
 .app-content {
   width: 100%;
   height: 100%;
+
+  .content-wrapper {
+    display: flex;
+
+    .content {
+      height: calc(100vh - #{$sysbar-height});
+      width: 100%;
+      overflow: auto;
+    }
+  }
 }
