frontend: create quiz
- add: route for create quiz view
- add: basic functionality for creating quiz
- quizes page pretty much done (mocked)

--- a/src/components/boxLayout/BoxLayout.scss
+++ b/src/components/boxLayout/BoxLayout.scss
@@ -1,9 +1,12 @@
 @import '../../theme/variables.scss';
 
 .shadowed-box {
-  border: solid 3px $blue;
   border-radius: 30px;
 
   box-shadow: $shadow-l;
   padding: 30px 40px;
+
+  &.border {
+    border: solid 3px $blue;
+  }
 }
