--- a/src/components/submitButton/SubmitButton.scss
+++ b/src/components/submitButton/SubmitButton.scss
@@ -1,6 +1,6 @@
 @import '../../theme/variables.scss';
 
-button {
+.submit-btn {
   background-color: $blue;
   color: white;
   font-size: $font-l;
