frontend: styled crate quiz page
- add: styling to create page

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -25,4 +25,18 @@
       border-bottom: solid 1px $blue;
     }
   }
+  &.inline-input {
+    display: block;
+    max-width: 300px;
+
+    input {
+      border-color: #e7e7e7;
+      font-size: $font-s;
+      padding: 5px 0;
+
+      &::placeholder {
+        color: #b5b5b5;
+      }
+    }
+  }
 }
