--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@ $blue-dark: #102233;
 $blue-light: #788c9e;
 $grey: #979797;
 $dark: #0d1b29;
+$red: #a81a1a;
+$green: #2c942f;
 
 $font-s: 14px;
 $font-m: 16px;
